--- a/dom/index.html
+++ b/dom/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <h1>DOM Manipulation</h1>
+    <h1 class="title" id="title">DOM Manipulation</h1>
 
     <script src="app.js"></script>
 </body>
