--- a/dom/index.html
+++ b/dom/index.html
@@ -9,6 +9,18 @@
 <body>
     
     <h1 class="title" id="title">DOM Manipulation</h1>
+    <h1>Welcome here to know more about JavaScript</h1>
+
+    <div class="box-container">
+        <div class="box">Box 1</div>
+        <div class="box">Box 2</div>
+        <div class="box">Box 3</div>
+        <div class="box">Box 4</div>
+        <div class="box">Box 5</div>
+        <div class="box">Box 6</div>
+        <div class="box">Box 7</div>
+        <div class="box">Box 8</div>
+    </div>
 
     <script src="app.js"></script>
 </body>
