Added two way of event listener in html element

--- a/dom/index.html
+++ b/dom/index.html
@@ -21,6 +21,14 @@
         <div class="box">Box 7</div>
         <div class="box">Box 8</div>
     </div>
+    <br>
+    <br>
+    <input class="input-1" type="text" placeholder="Type anything...">
+    <button id="handle-add-btn" onclick="handleSearch">ADD</button>
+    
+    <div class="comment-container">
+
+    </div>
 
     <script src="app.js"></script>
 </body>
