Added input value into a container and clear the input field

--- a/dom/index.html
+++ b/dom/index.html
@@ -23,10 +23,11 @@
     </div>
     <br>
     <br>
-    <input class="input-1" type="text" placeholder="Type anything...">
-    <button id="handle-add-btn" onclick="handleSearch">ADD</button>
+    <input class="input-1" id="search-box" type="text" placeholder="Type anything...">
+    <button id="handle-add-btn" onclick="handleSearch()">ADD</button>
     
-    <div class="comment-container">
+    <!-- put all comment inside a div  -->
+    <div id="comment-container">
 
     </div>
 
