Remove child element from an container by onclick event

--- a/dom/index.html
+++ b/dom/index.html
@@ -27,7 +27,7 @@
     <button id="handle-add-btn" onclick="handleSearch()">ADD</button>
     
     <!-- put all comment inside a div  -->
-    <div id="comment-container">
+    <div id="comment-container" onclick="removeComment()">
 
     </div>
 
