Loaded api from jsonplaceholder and display in a box

--- a/dom/index.html
+++ b/dom/index.html
@@ -31,6 +31,11 @@
 
     </div>
 
+    <!-- user container  -->
+    <section class="user-container" id="user-data-container">
+
+    </section>
+
     <script src="app.js"></script>
 </body>
 </html>
